src/sass/layout/_advantages.scss
.advantages-section {
  background-color: var(--footer-bg-color);
  padding-bottom: 97px;
  
  @media screen and (min-width: 768px) {
    padding-bottom: 140px;
  }
  @media screen and (min-width: 1280px) {
    padding-bottom: 140px;
  }
}

.advantages__list {
  @media screen and (min-width: 768px) {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    padding-left: -2px;
  }
}
.advantages__card {
  @media screen and (min-width: 768px) {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}
.visually__hidden {
  position: absolute;
  width: 1px;
  overflow: hidden;
  border: 0;
}

.advantages__item {
  margin-right: 70px;
  margin-bottom: 38px;
  color: var(--footer-bg-color);
  @media screen and (min-width: 768px) {
    margin-right: 60px;
    margin-bottom: 0;
  }
}

.advantages__figure {
  font-family: Titan One;
  font-weight: 400;
  font-size: 36px;
  line-height: calc(41 / 36);
  letter-spacing: 0.04em;
  text-transform: uppercase;
  margin-bottom: 12px;
  color: var(--btn-first-color);

  &:hover,
  &:focus {
    // color:orange ;
    animation-name: changeBgColor;
    animation-duration: 250ms;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    @keyframes changeBgColor {
      0% {
        color: deeppink;
      }

      100% {
        color: orange;
      }
    }
  }
    @media screen and (min-width: 768px) {
      font-size: 48px;
      margin-bottom: 13px;

      line-height: calc(55 / 48);
    }

    @media screen and (min-width: 1280px) {
      font-size: 58px;
      margin-bottom: 15px;
      text-align: right;
      line-height: calc(66 / 58);
    }
  }

  .advantages__figure-milk::before {
    content: '';

    background-size: cover;
    background-position: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;

    margin-bottom: 16px;
    width: 33px;
    height: 50px;
    background-repeat: no-repeat;
    background-image: url(../images/mobil/icon-milk-mobile@1x.png);

    @media (min-device-pixel-ratio: 2),
      (-webkit-min-device-pixel-ratio: 2),
      (-o-min-device-pixel-ratio: 2/1),
      (min-resolution: 192dpi),
      (min-resolution: 2dppx) {
      background-image: url(../images/mobil/icon-milk-mobile@2x.png);
    }
  

  @media screen and (min-width: 768px) {
    margin-bottom: 36px;
  }
  @media screen and (min-width: 1280px) {
    margin-bottom: 40px;
  }
}
.advantages__figure-milk:hover:before {
background-image: url(../images/mobil/icon-milk-mobile2@.png);
    width: 50px;
    height: 50px;
    transform: translateX(101%);
}

.advantages__figure-apple::before {
  content: '';

  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;

  margin-bottom: 16px;
  width: 50px;
  height: 50px;
  background-repeat: no-repeat;
  background-image: url(../images/mobil/icon-apple-mobile@1x.png);

  @media (min-device-pixel-ratio: 2),
    (-webkit-min-device-pixel-ratio: 2),
    (-o-min-device-pixel-ratio: 2/1),
    (min-resolution: 192dpi),
    (min-resolution: 2dppx) {
    background-image: url(../images/mobil/icon-apple-mobile@2x.png);
  }

  @media screen and (min-width: 768px) {
    margin-bottom: 36px;
  }
  @media screen and (min-width: 1280px) {
    margin-bottom: 40px;
  }

}
.advantages__figure-apple:hover:before {
background-image: url(../images/mobil/icon-apple-mobile2@.png);
transform: translateX(101%);
}


.advantages__figure-ice::before {
  content: '';

  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;

  margin-bottom: 16px;
  width: 44px;
  height: 50px;
  background-repeat: no-repeat;
  background-image: url(../images/mobil/icon-ice-mobile@1x.png);
  @media (min-device-pixel-ratio: 2),
    (-webkit-min-device-pixel-ratio: 2),
    (-o-min-device-pixel-ratio: 2/1),
    (min-resolution: 192dpi),
    (min-resolution: 2dppx) {
    background-image: url(../images/mobil/icon-ice-mobile@2x.png);
  }

  @media screen and (min-width: 768px) {
    margin-bottom: 36px;
  }
  @media screen and (min-width: 1280px) {
    margin-bottom: 40px;
  }
}

.advantages__figure-ice:hover:before {
background-image: url(../images/mobil/icon-ice-mobile2@.png);
    width: 50px;
    height: 50px;
    transform: translateX(101%);
}
.advantages__text {
  content: '';
  font-family: DM Sans;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: calc(20 / 12);
  color: var(--black-color);

  @media screen and (max-width: 767px) {
    flex-direction: column;
    font-size: 14px;
    line-height: calc(28 / 16);
  }
  @media screen and (min-width: 1280px) {
    font-size: 14px;
    line-height: calc(24 / 14);
    letter-spacing: 0.02em;
  }

  &:hover
  // &:focus 
  {
color: orange;
    
animation-duration: 250ms;
font-size: 18px;
font-style: bold;
}
}

  

